Update to latest version of ruby and docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,42 +1,41 @@
-version: '2'
-services:
+version: '3'
+
+volumes:
   store:
-    # data-only container
-    image: postgres:latest # reuse postgres container
-    volumes:
-      - /var/lib/postgresql/data
-    command: "true"
-  db:
-    image: postgres
-    ports:
-      - 5432:5432
-    volumes_from:
-      - store # connect postgres and the data-only container
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=rails_docker_database
+    driver: local
+  bundle:
+    driver: local
+
+services:
   web:
     build: .
     ports:
       - 3000:3000
     volumes:
       - .:/app
-    # This tells the web container to mount the `bundle` images'
-    # /bundle volume to the `web` containers /bundle path.
-    volumes_from:
-      - bundle
+      - bundle:/usr/local/bundle
     links:
       - db
+    # Keep the stdin open, so we can attach to our app container's process and do things such as
+    # byebug, etc:
+    stdin_open: true
+    # Enable sending signals (CTRL+C, CTRL+P + CTRL+Q) into the container:
+    tty: true
     command: ./bin/start.sh
-    environment:
-      - PORT=3000
-      - DB_HOST=db
-      - DB_PORT=5432
-      - DB_NAME=rails_docker_database
-      - DB_USER=postgres
-      - DB_PSWD=postgres
-  bundle:
-    image: busybox
+    environment: &app_env
+      PORT: 3000
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_USER: postgres
+      DB_PSWD: postgres
+      DB_NAME: development_database
+  db:
+    image: postgres:latest
+    ports:
+      - 5432:5432
     volumes:
-      - /bundle
+      - store:/var/lib/postgresql/data
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: development_database
